[package]
edition = "2024"
name = "claude-usage-metrics"
version = "0.1.0"

[dependencies]
opentelemetry = { version = "0.31.0", default-features = false, features = [
  "trace",
] }
opentelemetry-otlp = { version = "0.31.0", features = ["trace", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.31.0", features = ["trace", "rt-tokio"] }
prost = "0.14"
tokio = { version = "1.48.0", features = ["rt", "macros"] }
tonic = "0.14"
tracing = "0.1.44"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[profile.release]
codegen-units = 1
lto = true
strip = true
